<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="@color/teal_700"
            android:text="@string/add_a_new_product"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/et_productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_product_name"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_700"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="5dp"
            android:text="@string/description" />

        <EditText
            android:id="@+id/et_productDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_product_description"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_productPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:hint="@string/enter_product_price"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_productLat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:hint="@string/enter_product_provider_latitude"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_productLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:hint="@string/enter_product_provider_longitude"
            android:inputType="number"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btn_add_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_product" />
        <Button
            android:id="@+id/btn_products_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count_products" />
        <TextView
            android:id="@+id/count"
            android:textSize="20dp"
            android:textColor="@color/teal_700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="5dp"
            android:text="@string/count" />

        <TextView
            android:id="@+id/tv_display_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_700"
            android:padding="16dp"
            android:text="@string/view_products"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="@color/teal_700"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:paddingHorizontal="5dp"-->
<!--            android:text="@string/userLocation" />-->
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/addressText"-->
<!--            android:text="User address"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="19sp" />-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/location_button"
            android:layout_marginTop="15dp"
            android:text="Get current location"
            android:textAllCaps="false"
            android:textSize="19sp"/>






    </LinearLayout>
</RelativeLayout>
